Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8130858

CICompilerCount=1 when tiered is off is not allowed any more

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P4
    • 9
    • 9
    • hotspot
    • None
    • b77

    Backports

      Description

        java -XX:-TieredCompilation -XX:CICompilerCount=1 -version
        intx CICompilerCount=1 is outside the allowed range [ 2 ... 2147483647 ]
        Improperly specified VM option 'CICompilerCount=1'
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.

        CICompilerCount=1 is useful for debugging so output of multiple compiler threads are not intermixed
        ILW=LLH

        Attachments

          Issue Links

            Activity

              People

                roland Roland Westrelin
                roland Roland Westrelin
                Votes:
                0 Vote for this issue
                Watchers:
                3 Start watching this issue

                Dates

                  Created:
                  Updated:
                  Resolved: