8130858: CICompilerCount=1 when tiered is off is not allowed any more

8122937 broke handling of CICompilerCount

Reviewed-by: kvn, vlivanov, gziemski